--- a/aws-android-sdk-lex/pom.xml
+++ b/aws-android-sdk-lex/pom.xml
@@ -69,7 +69,8 @@
                 <extensions>true</extensions>
                 <configuration>
                     <sdk>
-                        <platform>11</platform>
+                      <platform>27</platform>
+                      <buildTools>27.0.3</buildTools>
                     </sdk>
                     <nativeLibrariesDirectory>${project.basedir}/src/main/jni</nativeLibrariesDirectory>
                 </configuration>
