--- a/aws-android-sdk-pinpoint/pom.xml
+++ b/aws-android-sdk-pinpoint/pom.xml
@@ -69,7 +69,7 @@
             <artifactId>android</artifactId>
             <version>5.0</version>
             <scope>system</scope>
-            <systemPath>${basedir}/../android-21-linux.jar</systemPath>
+            <systemPath>${env.ANDROID_PLATFORM}/android.jar</systemPath>
         </dependency>
     </dependencies>
 
