--- a/aws-android-sdk-cognitoauth/pom.xml
+++ b/aws-android-sdk-cognitoauth/pom.xml
@@ -60,15 +60,16 @@
   <build>
     <plugins>
       <plugin>
-                <groupId>com.simpligility.maven.plugins</groupId>
-                <artifactId>android-maven-plugin</artifactId>
-                <version>4.5.0</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <sdk>
-                        <platform>15</platform>
-                    </sdk>
-                </configuration>
+          <groupId>com.simpligility.maven.plugins</groupId>
+          <artifactId>android-maven-plugin</artifactId>
+          <version>4.5.0</version>
+          <extensions>true</extensions>
+          <configuration>
+            <sdk>
+              <platform>27</platform>
+              <buildTools>27.0.3</buildTools>
+            </sdk>
+          </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
