--- a/aws-android-sdk-mobile-client/pom.xml
+++ b/aws-android-sdk-mobile-client/pom.xml
@@ -112,7 +112,8 @@
         <extensions>true</extensions>
         <configuration>
           <sdk>
-            <platform>25</platform>
+            <platform>27</platform>
+            <buildTools>27.0.3</buildTools>
           </sdk>
         </configuration>
       </plugin>
